samples/_failures_safe/1761501613_1d86de_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5dd4bcb6.c: In function ‘main’:
./samples/SAFE/__tmp_5dd4bcb6.c:139:12: error: missing terminating " character
  139 |     printf("\nFiltered log entries
      |            ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5dd4bcb6.c:139:5: error: expected expression at end of input
  139 |     printf("\nFiltered log entries
      |     ^~~~~~
./samples/SAFE/__tmp_5dd4bcb6.c:139:5: error: expected declaration or statement at end of input
